<resources>
    <string name="app_name">DTTest</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="app_id">APP ID</string>
    <string name="u_id">U ID</string>
    <string name="token">TOKEN</string>
    <string name="submit">Submit</string>
    <string name="an_error_occurred">An Error Occurred</string>
    <string name="app_id_prefill">1246</string>
    <string name="u_id_prefill">superman</string>
    <string name="token_prefill">82085b8b7b31b3e80beefdc0430e2315f67cd3e1</string>
</resources>